Add summary table

--- a/FRONTEND_app/Shared/MainLayout.razor
+++ b/FRONTEND_app/Shared/MainLayout.razor
@@ -43,7 +43,8 @@
             new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
             new NavItem { Id = "2", Href = "/overview", IconName = IconName.BarChartFill, Text = "Overview"},
             new NavItem { Id = "3", Href = "/measurements", IconName = IconName.Clipboard2DataFill, Text = "Measurements"},
-            new NavItem { Id = "4", Href = "/control", IconName = IconName.PuzzleFill, Text = "Control Panel"}
+            new NavItem { Id = "4", Href = "/summary", IconName = IconName.PuzzleFill, Text = "Summary"},
+            // new NavItem { Id = "4", Href = "/control", IconName = IconName.PuzzleFill, Text = "Control Panel"}
         };
 
         return navItems;
