--- a/FRONTEND_app/Shared/MainLayout.razor
+++ b/FRONTEND_app/Shared/MainLayout.razor
@@ -44,7 +44,7 @@
             new NavItem { Id = "2", Href = "/overview", IconName = IconName.BarChartFill, Text = "Overview"},
             new NavItem { Id = "3", Href = "/measurements", IconName = IconName.Clipboard2DataFill, Text = "Measurements"},
             new NavItem { Id = "4", Href = "/summary", IconName = IconName.PuzzleFill, Text = "Summary"},
-            // new NavItem { Id = "4", Href = "/control", IconName = IconName.PuzzleFill, Text = "Control Panel"}
+            new NavItem { Id = "4", Href = "/aggregation", IconName = IconName.PuzzleFill, Text = "Aggregation"}
         };
 
         return navItems;
